--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "creatiwise",
   "version": "1.0.0",
   "description": "",
-  "homepage": "./",
-  "main": "index.js",
+  "homepage": ".",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
